# starter-interview-swe-python

./: README.md  pyproject.toml  requirements.txt
starter_interview_swe_python/: db.py  main.py
